# modern-c-build

./: .gitignore  .gitleaks.toml  CMakeLists.txt  LICENSE  README.md  temp_changelog.txt  vcpkg.json
.github/workflows/: ci.yml  security.yml
include/: file_utils.h  math_utils.h  string_utils.h
src/: calculator.c  demo.c  file_utils.c  hello_modern.c  math_utils.c  string_utils.c
test/: test_runner.c
